# algorithm-30

./: CMakeLists.txt  module.cmake
.ryppl/: METADATA
doc/: CMakeLists.txt
minmax/: CMakeLists.txt
minmax/doc/: CMakeLists.txt
minmax/test/: CMakeLists.txt
string/: CMakeLists.txt
string/doc/: CMakeLists.txt
string/test/: CMakeLists.txt
